k8s-manifests/mongodb/IngressRouteTCP.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mongodb
  namespace: mongodb
  labels:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: db
    app.kubernetes.io/part-of: mongodb
    app.kubernetes.io/environment: mongodb
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - mongodb
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mongodb
          port: 27017
